@@ -1,6 +1,8 @@
 v3.4.7 (2019-XX-XX)
 -------------------
 
+* Added --server.jwt-secret-keyfile to arangosh.
+
 * Fixed AQL query tracing for traversals, this lead to wrong "calls" count in
   query profiles
 
